# django-zappa-event-schedular

./: .gitignore  README.rst  __init__.py  pyproject.toml  setup.cfg
django-zappa-event-schedular/: __init__.py  admin.py  apps.py  constants.py  migrations  models.py  tests.py  utils.py  validators.py
django_zappa_event_schedular/: admin.py  apps.py  constants.py  models.py  utils.py  validators.py
django_zappa_event_schedular/migrations/: 0001_initial.py
docs/: conf.py  index.rst  requirements.txt
