[metadata]
name = django-zappa-event-schedular
version = 0.1.7-beta
description = A Django app to schedule task.
long_description = file: README.rst
url = https://github.com/tushar1328/django-zappa-event-schedular
author = Tushar Patel
author_email = tushar@djangoboy.in
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
project_urls =
    Source = https://github.com/tushar1328/django-zappa-event-schedular
    Documentation = https://django-zappa-event-schedular.readthedocs.io/en/latest/#
[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2